--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -460,3 +460,15 @@ h2.area_title
 		margin-bottom: -1em
 		position: relative
 		top: 1em
+	&.head_agenda
+		margin-top: -8em
+		padding-top: 12em
+		padding-bottom: 2em
+		background-image: url(../img/bg_fancy_a.jpg)
+		background-position: top
+		background-size: cover
+	&.explore
+		margin-top: 0
+		padding-top: 10vh
+		padding-bottom: 6vh
+		background: $white
