--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -41,7 +41,7 @@
 h2.area_title
 	font-size: 2em
 	font-weight: bold
-	margin: .5em 0 .5em .5em
+	margin: .5em 0
 	&.boxed
 		display: inline-block
 		position: relative
@@ -237,6 +237,7 @@ h2.area_title
 	background-size: cover
 	background-position: center
 	&.no_image
+		min-height: 14em
 		height: 14em
 	@media screen and (min-width: 79rem)
 		top: -4em
@@ -329,6 +330,10 @@ h2.area_title
 // Agenda
 
 #agenda
+	.max_wrap
+		padding-left: 1em
+		padding-right: 1em
+
 	form
 		margin: 2em 0
 
@@ -339,6 +344,7 @@ h2.area_title
 		border-radius: 0
 		background: $white
 		min-width: 14em
+		max-width: 17em
 		padding: 1em 1em .8em
 		margin-right: .8em
 
@@ -382,8 +388,8 @@ h2.area_title
 		margin: 1em 0 4em
 		li
 			background: $white
-			padding-right: 1em
-			padding-left: 1em
+			padding-right: .4em
+			padding-left: .4em
 			&:hover
 				background: $black
 				color: $white
@@ -404,6 +410,7 @@ h2.area_title
 				&.schedule
 					width: 16em
 					font-family: $Helvetica
+					font-size: .9em
 					color: $gray
 				&.thumbnail, &.location
 					display: none
@@ -460,15 +467,41 @@ h2.area_title
 		margin-bottom: -1em
 		position: relative
 		top: 1em
-	&.head_agenda
+	&.head_blur
 		margin-top: -8em
 		padding-top: 12em
 		padding-bottom: 2em
 		background-image: url(../img/bg_fancy_a.jpg)
 		background-position: top
 		background-size: cover
+		border-bottom: .1rem solid $white
 	&.explore
 		margin-top: 0
 		padding-top: 10vh
 		padding-bottom: 6vh
 		background: $white
+
+
+
+
+
+
+.page
+	.body_content
+		+Helvetica
+		font-size: 1.2em
+		padding-left: 2em
+		padding-right: 2em
+		line-height: 1.6em
+		h2, h3
+			font-family: $NewJune
+			font-weight: bold
+		h2
+			font-size: 1.4em
+		pre
+			color: $darkgray
+			font-size: .8em
+			margin-top: .2em
+		img
+			max-width: 100%
+			height: auto
