--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -22,8 +22,8 @@ a.button
 	max-width: 14em
 
 .excerpt
-	font-family: $Helvetica
-	line-height: 1.4em
+	+Helvetica
+	line-height: 1.6em
 	color: $gray
 	margin-top: 1em
 	img.poster
@@ -34,7 +34,7 @@ a.button
 	font-family: $Helvetica
 	color: $gray
 	letter-spacing: .02em
-	width: 100%
+	width: 80%
 
 .clear
 	clear: both
@@ -194,6 +194,8 @@ a.close
 		font-weight: bold
 		+font-smoothing()
 		padding: .4em .5em .2em
+		+ellipsis
+		max-width: 80%
 	h2
 		font-size: 1.4em
 		line-height: 1.4em
