--- a/themes/montana/sass/variables.sass
+++ b/themes/montana/sass/variables.sass
@@ -22,7 +22,8 @@ $NewJune: "New June", Helvetica, Arial, sans-serif
 $NewJuneBold: "New June Bold", Helvetica, Arial, sans-serif
 $Helvetica: Helvetica, Arial, sans-serif
 
-//hacer mixin
+// Mixins
+
 @mixin font-smoothing($value: antialiased)
 	@if $value == antialiased
 		-webkit-font-smoothing: antialiased
@@ -30,3 +31,8 @@ $Helvetica: Helvetica, Arial, sans-serif
 	@else
 		-webkit-font-smoothing: subpixel-antialiased
 		-moz-osx-font-smoothing: auto
+
+
+@mixin Helvetica()
+	font-family: $Helvetica
+	letter-spacing: .03em
