--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -364,6 +364,18 @@ h2.area_title
 				padding: 0.1em .4em 0 0
 			input
 				padding-left: 4em
+	input[type="submit"]
+		min-width: 8em
+	input.disabled
+		color: $lightgray
+		pointer-events: none
+	img.loader
+		vertical-align: bottom
+		height: 2em
+		position: relative
+		top: -.5em
+		display: none
+
 
 .ag_results
 	h3
