--- a/themes/montana/sass/setup.sass
+++ b/themes/montana/sass/setup.sass
@@ -33,6 +33,7 @@ a
 	text-decoration: none
 
 hr
+	position: relative
 	clear: both
 	width: 100%
 	border: none
@@ -54,7 +55,14 @@ ol
 strong
 	font-weight: 700
 
-
+input, select, button
+	font: inherit
+	+appearance(none)
+	border: .1rem solid
+	border-radius: 0
+	background: $white
+	min-width: 14em
+	padding: 1em 1em .8em
 
 
 
@@ -114,13 +122,57 @@ header
 		ul
 			display: flex
 			justify-content: space-between
+
 	.current-menu-item a
 		color: $orange !important
+	.submenu, nav#menu, a#open_search, form#searchform
+		+transition(opacity .5s)
+	hr
+		+transition(margin-top .5s ease)
+	.active_search
+		.submenu, nav#menu, a#open_search
+			pointer-events: none
+			opacity: 0
+		form#searchform
+			display: block
+			opacity: 1
+		hr
+			margin-top: 2.4em
 
-
-
-
-
+form#searchform
+	position: absolute
+	width: 100%
+	right: 0
+	top: 0em
+	padding: 0 5em 0 13em
+	display: none
+	opacity: 0
+	input#s
+		padding: 0
+		background: none
+		border: none
+		font-size: 1.6em
+		min-width: 20em
+		color: $white
+		width: 60%
+		margin-top: .8em
+	input#searchsubmit
+		background: none
+		color: $white
+		min-width: 7em
+		float: right
+	a#close_search
+		float: right
+		border: .1rem solid
+		border-radius: 50%
+		width: 1.4em
+		height: 1.4em
+		text-align: center
+		font-size: 1.6em
+		line-height: 1.3em
+		margin-left: 1em
+		margin-top: .3em
+		cursor: pointer
 
 
 
