--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -156,6 +156,8 @@ a.close
 			border: 0
 			outline: none
 			background: transparent
+			min-width: initial
+			padding: 0
 			&:hover:before,
 			&:focus:before
 				opacity: 1
