--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -434,6 +434,30 @@ a.close {
     width: 100%;
     height: 100%; }
 
+nav.pagination {
+  text-align: center;
+  font-family: Helvetica, Arial, sans-serif; }
+
+.page-numbers {
+  border: 0.1rem solid;
+  vertical-align: middle;
+  display: inline-block;
+  width: 2em;
+  height: 2em;
+  padding-top: 0.35em;
+  margin: 0 0.2em;
+  background: white; }
+  .page-numbers.prev, .page-numbers.next {
+    border-radius: 50%;
+    padding-top: 0.2em; }
+  .page-numbers.dots {
+    border: none;
+    background: none; }
+  .page-numbers.current {
+    background: #f57b20;
+    border-color: #f57b20;
+    color: white; }
+
 .slider {
   position: relative;
   z-index: 0; }
