--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -132,6 +132,13 @@ nav.pagination
 		border-color: $orange
 		color: $white
 
+span
+	&.box
+		border: .1rem solid
+		border-radius: .3em
+		margin: .2em
+		padding: .15em .4em .1em
+		text-align: center
 
 
 
