--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -458,6 +458,13 @@ nav.pagination {
     border-color: #f57b20;
     color: white; }
 
+span.box {
+  border: 0.1rem solid;
+  border-radius: 0.3em;
+  margin: 0.2em;
+  padding: 0.15em 0.4em 0.1em;
+  text-align: center; }
+
 .slider {
   position: relative;
   z-index: 0; }
@@ -715,7 +722,8 @@ nav.pagination {
 h2.area_title {
   font-size: 2em;
   font-weight: bold;
-  margin: 0.5em 0; }
+  margin: 0.5em 0;
+  padding: 0 1.2em 0.4em; }
   h2.area_title.boxed {
     display: inline-block;
     position: relative;
@@ -951,10 +959,10 @@ h2.area_title {
 
 .post_meta {
   background: #1d1d1d;
-  color: white; }
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
   .post_meta dt {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     font-weight: bold;
     color: #818181; }
   .post_meta dd {
