--- a/themes/montana/sass/setup.sass
+++ b/themes/montana/sass/setup.sass
@@ -64,6 +64,13 @@ input, select, button
 	min-width: 14em
 	padding: 1em 1em .8em
 
+.debugger
+	width: 100%
+	min-height: 1em
+	background: yellow
+	padding: 1em
+
+
 
 
 // Header
