--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -203,6 +203,7 @@ h2.area_title
 			margin-top: .2em
 		h1
 			font-size: 3em
+		h1, .subtitle, .status_label
 			+font-smoothing()
 	.gallery
 		float: right
