--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -281,6 +281,8 @@ span
 		max-width: 15em
 		h2
 			font-size: 1em
+			max-height: 4em
+			overflow: hidden
 		.status_label p
 			+ellipsis()
 	@media screen and (max-width: 30rem)
