--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -462,8 +462,10 @@ h2.area_title
 	padding-top: .35em
 .ui-datepicker
 	width: 15.3em
+	+font-smoothing()
 	.ui-datepicker-title
 		text-transform: uppercase
+		font-size: .9em
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus
 	background: transparent
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight
