--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -247,6 +247,8 @@ h2.area_title
 
 .post_info, .post_meta
 	padding: 1.6em
+	@media screen and (max-width: 50rem)
+		height: initial !important
 
 .post_head
 	padding: 0 1em
@@ -299,9 +301,14 @@ h2.area_title
 		overflow: auto
 	.post_meta
 		width: 45%
-	.post_meta, .post_info
+	.single .post_meta, .single .post_info
 		float: left
-
+	.page
+		.post_info
+			margin-left: 20%
+		.main_content_column
+			margin-left: 20%
+			width: 60%
 
 .widget
 	padding: 1em
@@ -341,9 +348,12 @@ h2.area_title
 	form
 		margin: 2em 0
 
-	input, select
-		max-width: 17em
+	input[type="text"], select
+		width: 17em
 		margin-right: .8em
+		margin-bottom: 1em
+		// @media screen and (max-width:600px)
+		// 	width: 48%
 
 	.input_wrap
 		position: relative
@@ -370,7 +380,8 @@ h2.area_title
 		vertical-align: bottom
 		height: 2em
 		position: relative
-		top: -.5em
+		top: -1.5em
+		left: -1em
 		display: none
 
 
@@ -412,28 +423,40 @@ h2.area_title
 
 		.max_wrap
 			border-bottom: .1rem solid $black
+			overflow: auto
 			> div
-				display: table-cell
+				display: inline-block
+				// float: left
 				vertical-align: middle
 				padding: 1.5em 1em 1.4em 0
 				&.schedule
-					width: 16em
+					width: 22%
 					font-family: $Helvetica
 					font-size: .9em
 					color: $gray
-				&.thumbnail, &.location
+				&.thumbnail
 					display: none
-				&.title
-					width: 75%
-					padding-left: 1em
+					border: .1rem solid
+					padding: 0
+					margin-top: 1.5em
+					margin-bottom: 1.4em
+				&.title, &.location
+					width: 78%
+					float: right
 				@media screen and (min-width: 50rem)
 					&.schedule
-						width: 20em
-					&.thumbnail, &.location
-						display: table-cell
-						width: 20em
+						width: 16%
+					&.thumbnail
+						display: inline-block
+						width: 16%
+						min-height: 4em
+					&.location
+						width: 18%
+						float: inherit
 					&.title
-						width: 55%
+						width: 48%
+						float: inherit
+						padding-left: 1em
 		img
 			display: block
 			width: 100%
@@ -510,22 +533,22 @@ h2.area_title
 
 
 
-.page
-	.body_content
-		+Helvetica
-		font-size: 1.2em
-		padding-left: 2em
-		padding-right: 2em
-		line-height: 1.6em
-		h2, h3
-			font-family: $NewJune
-			font-weight: bold
-		h2
-			font-size: 1.4em
-		pre
-			color: $darkgray
-			font-size: .8em
-			margin-top: .2em
-		img
-			max-width: 100%
-			height: auto
+.body_content.format
+	+Helvetica
+	font-size: 1.2em
+	padding-left: 2em
+	padding-right: 2em
+	line-height: 1.6em
+	margin-bottom: 4em
+	h2, h3
+		font-family: $NewJune
+		font-weight: bold
+	h2
+		font-size: 1.4em
+	pre
+		color: $darkgray
+		font-size: .8em
+		margin-top: .2em
+	img
+		max-width: 100%
+		height: auto
