--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -14,6 +14,9 @@
 	.slide .bg_img
 		max-width: 166rem
 		margin: 0 auto
+		&.blur
+			-webkit-filter: blur(1em)
+			filter: blur(1em)
 	.details.box
 		bottom: 6em
 		width: 90%
@@ -381,7 +384,7 @@ h2.area_title
 		height: 2em
 		position: relative
 		top: -1.5em
-		left: -1em
+		left: .5em
 		display: none
 
 
