--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -35,7 +35,6 @@ a.link
 .fleft
 	float: left
 	margin-right: 1em
-	max-width: 14em
 
 .excerpt
 	+Helvetica
@@ -44,6 +43,7 @@ a.link
 	margin-top: 1em
 	img.poster
 		@extend .fleft
+		max-width: 10em
 
 .status_label
 	font-size: .85em
@@ -254,18 +254,21 @@ span
 
 .deck
 	overflow: auto
-	// padding-top: 2em
 	.row
 		display: inline-block !important
-		width: 33.33vw
-		max-width: 15em
-		// .card:nth-child(2)
+		width: 50vw
+		// max-width: 22.5em
 		&.fours
 			width: 50vw
 			max-width: 22.5em
 		&.threes
-			width: 33.33vw
-			max-width: 31em
+			width: 90vw
+			max-width: 30.15em
+			// @media screen and (min-width: 30em)
+			// 	max-width: 31em
+			// 	min-width: inherit
+		&.sixs
+			max-width: 15em
 
 
 
@@ -293,30 +296,32 @@ span
 			height: 4.1em
 			overflow: hidden
 		.details.box
-			@media screen and (min-width: 30rem)
+			@media screen and (min-width: 30em)
 				min-height: 18em
 	&.sixs
-		width: 33.33vw
+		// width: 33.33vw
 		max-width: 15em
 		h2
 			font-size: 1em
 			max-height: 4em
 			overflow: hidden
-		.status_label p
-			+ellipsis()
-	@media screen and (max-width: 30rem)
+	.status_label p
+		+ellipsis()
+	@media screen and (max-width: 30em)
 		&.fours, &.sixs
-			width: 14em
+			width: 15em
 		&.fours h2
 			font-size: 1em
 	&.movie
 		.details.box
 			margin-top: 18em
 		img
-			margin-top: -20em
+			margin-top: -12em
 			max-height: 27.5em
-		@media screen and (max-width: 30rem)
+		@media screen and (max-width: 30em)
 			width: 20em
+			img
+				margin-top: -20em
 	&.tv
 		min-height: 10em
 		vertical-align: top
