--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -314,7 +314,9 @@ span
 			font-size: 1em
 	&.movie
 		.details.box
-			margin-top: 18em
+			margin-top: 20em
+			@media screen and (min-width: 30em)
+				margin-top: 12em
 		img
 			margin-top: -12em
 			max-height: 27.5em
