--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -303,8 +303,11 @@ span
 		max-width: 15em
 		h2
 			font-size: 1em
-			max-height: 4em
+			height: 4em
 			overflow: hidden
+			margin-bottom: 3em
+		img
+			max-height: 6em
 	.status_label p
 		+ellipsis()
 	@media screen and (max-width: 30em)
@@ -313,6 +316,8 @@ span
 		&.fours h2
 			font-size: 1em
 	&.movie
+		h2
+			margin-bottom: 4em
 		.details.box
 			margin-top: 20em
 			@media screen and (min-width: 30em)
@@ -327,6 +332,7 @@ span
 	&.tv
 		min-height: 10em
 		vertical-align: top
+		padding: 1.5rem
 		h3
 			font-weight: bold
 			margin-top: 1em
