--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -300,6 +300,11 @@ h2.area_title
 		border: .1rem solid $white
 		padding-top: .65em
 
+
+.main_content_column img
+	max-width: 100%
+	height: auto
+
 @media screen and (min-width: 50em)
 	.main_content_column
 		width: 55%
