Undo temporal big slider size fix

--- a/themes/montana/sass/index.sass
+++ b/themes/montana/sass/index.sass
@@ -9,30 +9,10 @@
 
 // Shame
 @media screen and (max-width:60em)
-	.slider .slide
-		height: 65vh
-		min-height: 20em
-		.bg_img
-			min-height: 30em
-			height: 60vh
 	.big.slider
 		margin-top: 0
-
-@media screen and (max-width:40em)
-	.slider .slide
-		height: 45vh
-		min-height: 20em
-		.bg_img
-			min-height: 20em
-			height: 40vh
-
-@media screen and (max-width:30em)
-	.slider .slide
-		height: 40vh
-		min-height: 20em
-		.bg_img
-			min-height: 10em
-			height: 35vh
+		.slide
+			max-height: 65em
 
 
 .wpcf7-form
